# cargo-alias

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
src/: cargo-alias.rs  cargo-unalias.rs  main.rs  util.rs
