[package]
name = "cargo-alias"
version = "0.2.2"
authors = ["James Morris <jamesmorris2@gmail.com>"]
edition = "2018"
description = "Easily view, create, and delete cargo aliases"
readme = "README.md"
repository = "https://github.com/J-M0/cargo-alias"
license = "MIT OR Apache-2.0"
keywords = ["cargo-subcommand", "alias", "unalias"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[dependencies]
anyhow = "1.0.43"
clap = { version = "3.1.15", features = ["derive"] }
toml_edit = "0.14.4"
